--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "react-native-google-mobile-ads": "^15.4.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-maps": "^1.24.3",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
