--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.79.1",
     "react-native-alert-notification": "^0.4.2",
     "react-native-compressor": "^1.12.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.27.1",
