--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-alert-notification": "^0.4.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-compressor": "^1.12.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-dotenv": "^3.4.11",
@@ -29,6 +30,7 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^15.4.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.1",
     "react-native-image-viewing": "^0.2.2",
     "react-native-maps": "^1.24.3",
@@ -36,6 +38,7 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1",
+    "react-native-super-grid": "^6.0.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.3.0"
   },
