--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "googleapis": "^166.0.0",
     "laravel-echo": "^2.1.6",
     "moment": "^2.30.1",
     "react": "19.0.0",
