--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/messaging": "^22.4.0",
-    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
-    "googleapis": "^166.0.0",
+    "crypto-js": "^4.2.0",
     "laravel-echo": "^2.1.6",
     "moment": "^2.30.1",
     "react": "19.0.0",
@@ -42,7 +41,8 @@
     "react-native-screens": "^4.11.1",
     "react-native-super-grid": "^6.0.2",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
